--- a/os_lab_4/Makefile
+++ b/os_lab_4/Makefile
@@ -2,7 +2,7 @@ CC := gcc
 CFLAGS := -std=c17 -Wall -Wextra -O2
 
 all: mychmod
-mychmod: mychmod.c
+mychmod: main.c
 	$(CC) $(CFLAGS) $< -o $@
 
 clean:
